[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
rayon = "1.8.0"
# wasm-bindgen-rayon = "1.0.3"
web-sys = { version = "0.3.64", features = ["Window", "Performance", "console"] }
